# Displacement-MicroMap-SDK

./: .gitignore  README.md
micromesh_core/: .editorconfig  CMakeLists.txt  README.md
micromesh_core/include/micromesh/: micromesh_api.h  micromesh_format_types.h  micromesh_gpu.h  micromesh_operations.h  micromesh_types.h  micromesh_utils.h
micromesh_core/include/micromesh_internal/: micromesh_containers.h  micromesh_context.h  micromesh_math.h
micromesh_core/src/: context.cpp  convert.cpp  mesh.cpp  micromap.cpp  sanitize.cpp  utils.cpp
micromesh_core/test/: test_core.cpp
micromesh_displacement_compression/: .gitignore  CMakeLists.txt  README.md
micromesh_displacement_compression/include/micromesh/: micromesh_displacement_compression.h
micromesh_displacement_compression/src/: cpp_compatibility.cpp  cpp_compatibility.h  displacement_block_codec.cpp  displacement_block_codec.h  displacement_compression.cpp  displacement_configs.cpp  displacement_configs.h  displacement_diagnostic_utils.h  displacement_mesh_codec.cpp  displacement_mesh_codec.h
micromesh_displacement_compression/test/: test_compression.cpp
micromesh_displacement_remeshing/: .clang-format  .gitignore  CMakeLists.txt  README.md
micromesh_displacement_remeshing/cmake/: vulkan.cmake
micromesh_displacement_remeshing/include/micromesh/: micromesh_displacement_remeshing.h
micromesh_displacement_remeshing/shaders/: remesh_accessors.h  remesh_apply_min_displacement.comp.glsl  remesh_apply_min_displacement.h  remesh_bindings.h  remesh_clear_edge_list.comp.glsl  remesh_clear_edge_list.h  remesh_clear_hash_map.comp.glsl  remesh_clear_hash_map.h  remesh_clear_micromesh_data.comp.glsl  remesh_clear_micromesh_data.h  remesh_collapse_flag.comp.glsl  remesh_collapse_flag.h  remesh_collapse_propagate.comp.glsl  remesh_collapse_propagate.h  remesh_collapse_resolve.comp.glsl  remesh_collapse_resolve.h  remesh_common.h  remesh_compact_indices.comp.glsl  remesh_compact_indices.h  remesh_compact_vertices.comp.glsl  remesh_compact_vertices.h  remesh_deduplicate.comp.glsl  remesh_deduplicate.h  remesh_deduplicate_base.comp.glsl  remesh_deduplicate_base.h  remesh_deduplicate_finalize.comp.glsl  remesh_deduplicate_finalize.h  remesh_deduplicate_finalize_base.comp.glsl  remesh_deduplicate_finalize_base.h  remesh_deduplicate_save_aliases_base.comp.glsl  remesh_deduplicate_save_aliases_base.h  remesh_edge_cost_distribute.comp.glsl  remesh_edge_cost_distribute.h  remesh_edge_list.comp.glsl  remesh_edge_list.h  remesh_edge_list_finalize.comp.glsl  remesh_edge_list_finalize.h  remesh_generate_subdivision_info.comp.glsl  remesh_generate_subdivision_info.h  remesh_host_device.h  (+6 more)
micromesh_displacement_remeshing/src/: remeshing_cpu.cpp  remeshing_gpu.cpp  remeshing_internal.h
micromesh_displacement_remeshing/test/: test_remeshing.cpp
